fixed bubbles overflowing horizontally!

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -11,6 +11,7 @@
 	margin-bottom: -10px;
 	border: solid 1px rgba(0, 0, 0, 0.5);
 	word-wrap: break-word;
+	word-break: break-all;
 	float: left;
 	clear: both;
 
